@@ -1,3 +1,9 @@
+2011-10-23  Torbjorn Granlund  <tege@gmplib.org>
+
+	* mpn/s390_64/aorrlsh1_n.asm: New file, developed from aorslsh1_n.asm.
+	* mpn/s390_64/sublsh1_n.asm: New file.
+	* mpn/s390_64/aorslsh1_n.asm: Remove file.
+
 2011-10-22  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/s390_64/logops_n.asm: New file.
